feat: media query for pagination menu component

--- a/public/css/components/paginationDesktop.module.css
+++ b/public/css/components/paginationDesktop.module.css
@@ -6,3 +6,9 @@
   justify-content: flex-end;
   gap: 8px;
 }
+
+@media only screen and (max-width: 768px) {
+  .btnWrapper {
+    display: none;
+  }
+}
